<resources>
    <string name="app_name">Cricket Record</string>
    <string name="teamA">Team A : </string>
    <string name="teamB">Team B : </string>
    <string name="submit">SUBMIT</string>
    <string name="name">Name</string>
    <string name="zero">0</string>
    <string name="single">Single</string>
    <string name="four">four</string>
    <string name="six">six</string>
    <string name="wicket">wicket</string>
    <string name="extra">extra</string>
    <string name="dot">dot</string>
    <string name="reset">Reset</string>
    <string name="restart">Restart</string>
    <string name="boundary_set">%1$d/%2$d</string>
    <string name="score">Runs : %1$d\nBalls: %2$d\nWickets: %3$d\nFour: %4$d\nSix: %5$d\nExtras: %6$d</string>
    <string name="item">Item</string>
    <string name="score_set">%1$d/%2$d(%3$d)</string>
    <string name="overs">%1$d Overs</string>
</resources>